# adventofcode2022

./: README.org  aoc2022.cabal  newday.sh  template.hs
day01/: Main.hs
day02/: Main.hs
day03/: Main.hs
day04/: Main.hs
day05/: Main.hs
day06/: Main.hs
day07/: Main.hs
day08/: Main.hs
day09/: Main.hs
day10/: Main.hs
day11/: Main.hs
day12/: Main.hs
